# domain_status_graph

./: .coverage.Alexs-MacBook-Pro-2.local.3741.XBdCTVEx  .env.sample  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CODE_REVIEW_ISSUES.md  EXTRACTION_BUG_FIXES.md  Makefile  QUICK_START.md  README.md  SETUP_GUIDE.md  SNYK_SECURITY_REPORT.md  TESTING_GUIDE.md  TEST_COVERAGE_ANALYSIS.md  check_extraction_progress.sh  pyproject.toml  test_changes.sh
.github/workflows/: ci.yml
data/: domain.dump  domain_status.db  er_ai_audit.csv  er_spot_check.csv
data/cache/: cache.db
docs/: 10K_PARSING.md  10k_parsing.md  ADDING_NEW_PARSER.md  ADDING_PARSER.md  ARCHITECTURE.md  BLOG_POST_DRAFT.md  CACHE_MANAGEMENT.md  COMPANY_SIMILARITY_QUERIES.md  DATAMULE_SETUP.md  EDGE_QUALITY_SYSTEM.md  EXAMPLE_QUALITY_REVIEW.md  EXTENSIBLE_PARSING.md  GDS_ALGORITHM_COVERAGE.md  GRAPH_CREATION_PIPELINE.md  PROJECT_ASSESSMENT.md  README.md  SIMILARITY_BUG_ANALYSIS.md  STEP_BY_STEP_GUIDE.md  VALUE_PROPOSITION.md  architecture.md  cache_management.md  current_events_examples.md  datamule_setup.md  entity_resolution_evaluation.md  gds_features.md  graph_schema.md  graphrag.md  graphrag_testing.md  money_queries.md  monitoring_graphrag.md  research_enhancements.md  step_by_step_guide.md
domain_status_graph/: __init__.py  cache.py  cli.py  config.py  constants.py
domain_status_graph/cli/: __init__.py  args.py  commands.py  connection.py  logging.py
domain_status_graph/company/: __init__.py  enrichment.py  queries.py  similarity.py
domain_status_graph/consensus/: __init__.py  domain_consensus.py
domain_status_graph/domain/: __init__.py  models.py
domain_status_graph/embeddings/: __init__.py  chunking.py  create.py  openai_client.py  sqlite_cache.py
domain_status_graph/gds/: company_similarity.py  company_tech.py  tech_adoption.py  tech_affinity.py  utils.py
domain_status_graph/ingest/: loaders.py  sqlite_readers.py
domain_status_graph/neo4j/: __init__.py  connection.py  utils.py
domain_status_graph/parsing/: __init__.py  base.py  business_description.py  competitor_extraction.py  filing_metadata.py  risk_factors.py  text_extraction.py  website_extraction.py
domain_status_graph/similarity/: __init__.py  cosine.py
domain_status_graph/sources/: __init__.py  finnhub.py  finviz.py  sec_companies.py  sec_edgar.py  sec_edgar_check.py  yfinance.py
domain_status_graph/utils/: __init__.py  datamule.py  file_discovery.py  hashing.py  parallel.py  rate_limiting.py  stats.py  tar_extraction.py  tenk_workers.py
public_company_graph/: __init__.py  cache.py  config.py  constants.py  retry.py
public_company_graph/cli/: __init__.py  args.py  commands.py  connection.py  logging.py
public_company_graph/company/: __init__.py  enrichment.py  queries.py  similarity.py
public_company_graph/consensus/: __init__.py  domain_consensus.py
public_company_graph/domain/: __init__.py  validation.py
public_company_graph/embeddings/: __init__.py  chunking.py  create.py  openai_client.py  openai_client_async.py
public_company_graph/entity_resolution/: __init__.py  candidates.py  embedding_scorer.py  filters.py  layered_validator.py  matchers.py  relationship_verifier.py  resolver.py  scoring.py  tiered_decision.py
public_company_graph/gds/: __init__.py  company_similarity.py  company_tech.py  competitive_analytics.py  tech_adoption.py  tech_affinity.py  utils.py
public_company_graph/graphrag/: __init__.py  chunking.py  documents.py  filing_text.py  queries.py
public_company_graph/ingest/: __init__.py  loaders.py  sqlite_readers.py
public_company_graph/neo4j/: __init__.py  connection.py  (+2 more)
scripts/: analyze_similarity_distribution.py  analyze_supply_chain.py  ask_graphrag.py  audit_and_clean_edges.py  audit_edges_cypher.cypher  backfill_company_filing_dates.py  bootstrap_graph.py  chat_graphrag.py  check_cache_status.py  check_download_progress.py  check_embedding_cache_status.py  cleanup_10k_data.py  cleanup_edges_systemic.py  cleanup_false_positives.py  collect_domains.py  compare_databases.py  compute_company_similarity.py  compute_company_similarity_via_domains.py  compute_competitive_analytics.py  compute_domain_similarity.py  compute_gds_features.py  compute_keyword_similarity.py  create_company_embeddings.py  create_domain_embeddings.py  create_graphrag_layer.py  create_risk_similarity_graph.py  create_similarity_graph.py  download_10k_filings.py  embedding_cache.py  enrich_company_identifiers.py  enrich_company_properties.py  ensure_vector_index.py  er_ai_audit.py  er_analyze_errors.py  er_evaluate_split.py  evaluate_layered_validator.py  evaluate_parsers.py  export_10k_domains.py  extract_business_relationships.py  extract_competitors.py  (+18 more)
src/: create_embeddings.py  embedding_cache.py  openai_client.py
tests/: __init__.py  conftest.py  test_graphrag_chat.py
(+102 files in other folders)
