[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-status-graph"
version = "0.1.0"
description = "A knowledge graph of domains and their technology stacks with Graph Data Science features"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Alex Woolford", email = "alex@woolford.io"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # Core - Neo4j
    "neo4j>=5.0.0",
    "graphdatascience>=1.0.0",

    # Core - OpenAI
    "openai>=1.0.0",
    "tiktoken>=0.5.0",  # Token counting for embedding truncation

    # Configuration (pydantic-settings replaces python-dotenv with type validation)
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # HTTP & Networking
    "requests>=2.31.0",
    "tenacity>=8.0.0",  # Retry logic with rate limiting support

    # Data Processing
    "numpy>=1.24.0",
    "tqdm>=4.65.0",

    # Caching
    "diskcache>=5.6.0",

    # SEC/Financial Data
    "datamule>=0.332.0",
    "yfinance>=0.2.0",

    # HTML/XML Parsing
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",  # Fast parser backend for BeautifulSoup
    "defusedxml>=0.7.1",  # Prevent XXE attacks in XML parsing
    "ixbrlparse>=0.0.8",  # Parse iXBRL elements from SEC filings

    # Domain Validation
    "tldextract>=5.0.0",  # Domain validation using Public Suffix List
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",  # Fast linter+formatter (replaces flake8, isort, and more)
    "black>=24.0.0",  # Kept for explicit formatting control
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/alexwoolford/domain_status_graph"
Repository = "https://github.com/alexwoolford/domain_status_graph"
Issues = "https://github.com/alexwoolford/domain_status_graph/issues"

[project.scripts]
bootstrap-graph = "domain_status_graph.cli:run_bootstrap"
compute-gds-features = "domain_status_graph.cli:run_gds_features"
health-check = "domain_status_graph.cli:run_health_check"
run-all-pipelines = "domain_status_graph.cli:run_all_pipelines"
cache = "domain_status_graph.cli:run_cache"
enrich-company-properties = "domain_status_graph.cli:run_enrich_company_properties"
compute-company-similarity = "domain_status_graph.cli:run_compute_company_similarity"
validate-ranking-quality = "domain_status_graph.cli:run_validate_ranking_quality"
validate-famous-pairs = "domain_status_graph.cli:run_validate_famous_pairs"
compute-company-similarity-via-domains = "domain_status_graph.cli:run_compute_company_similarity_via_domains"
optimize-similarity-weights = "domain_status_graph.cli:run_optimize_similarity_weights"

[tool.setuptools]
packages = ["domain_status_graph"]

[tool.setuptools.package-data]
"domain_status_graph" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E203",  # Conflicts with Black's slice formatting
    "E501",  # Line too long (handled by formatter)
    "E402",  # Module level import not at top (sometimes intentional)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]  # Scripts often have late imports after setup

[tool.ruff.lint.isort]
known-first-party = ["domain_status_graph"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "graphdatascience.*",
    "openai.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=domain_status_graph --cov-report=term-missing --cov-report=xml"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require Neo4j, database, etc.)",
]
